--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Reset dasar */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,11 +11,13 @@ body {
   color: #2c3e50;
 }
 
+/* Layout utama */
 .wrapper {
   display: flex;
   min-height: 100vh;
 }
 
+/* Sidebar */
 .sidebar {
   width: 220px;
   background-color: #34495e;
@@ -52,12 +55,14 @@ body {
   background-color: #2c3e50;
 }
 
+/* Konten utama */
 .content {
   flex: 1;
   padding: 30px;
   background-color: #ecf0f1;
 }
 
+/* Formulir */
 .form-grid {
   display: grid;
   grid-template-columns: 1fr 2fr;
