--- a/style.css
+++ b/style.css
@@ -150,11 +150,12 @@ button:hover {
   }
 
   .sidebar {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    overflow-x: auto;
-  }
+  border: 3px solid red !important;
+  background-color: #34495e !important;
+  color: white !important;
+  width: 220px !important;
+  height: 100vh !important;
+}
 
   .sidebar nav ul {
     display: flex;
