--- a/style.css
+++ b/style.css
@@ -157,6 +157,12 @@ button:hover {
     z-index: 1000;
   }
 
+  .logo {
+      margin: 0 0 20px;
+      font-size: 1.5em;
+      text-align: center;
+    }
+
   .sidebar.active {
     transform: translateX(0);
   }
