--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ button:hover {
     width: 220px;
     background-color: #34495e;
     padding: 50px 20px 20px 20px; /* ruang untuk tombol */
-    transform: translateX(-100%);
+    transform: translateX(-200px); /* Sisakan 20px dari 220px total */
     transition: transform 0.3s ease;
     z-index: 1000;
   }
