--- a/style.css
+++ b/style.css
@@ -98,6 +98,17 @@ button:hover {
   background-color: #1e6fa3;
 }
 
+.sidebar::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: -20px;
+  width: 20px;
+  height: 100%;
+  background-color: #2c3e50;
+}
+
+
 /* Toast */
 .toast {
   visibility: hidden;
